@@ -1,6 +1,10 @@
 buildscript {
   repositories {
+    mavenLocal()
     jcenter()
+    maven {
+      url = 'https://repo.maven.apache.org/maven2'
+    }
   }
   dependencies {
     classpath("net.serenity-bdd:serenity-gradle-plugin:2.4.24")
@@ -36,7 +40,7 @@ allprojects {
 
 gitProperties {
   gitPropertiesDir = new File("${project.rootDir}/src/main/resources/uk/gov/hmcts/reform/laubackend/cases/gitcommit")
-  keys = ['git.commit.id','git.commit.time']
+  keys = ['git.commit.id', 'git.commit.time']
   dateFormat = "yyyy-MM-dd'T'HH:mmZ"
   dateFormatTimeZone = "GMT"
 }
@@ -89,6 +93,9 @@ test {
 }
 
 configurations {
+  cucumberRuntime {
+    extendsFrom testRuntime
+  }
   integrationTestCompile.extendsFrom testCompile
   integrationTestRuntime.extendsFrom testRuntime
   functionalTestCompile.extendsFrom testCompile
@@ -113,17 +120,24 @@ task functional(type: Test) {
 }
 
 task integration(type: Test) {
-  description = "Runs integration tests"
-  group = "Verification"
-  testClassesDirs = sourceSets.integrationTest.output.classesDirs
-  classpath = sourceSets.integrationTest.runtimeClasspath
-  failFast = true
+    description = "Runs integration tests"
+    group = "Verification"
+    testClassesDirs = sourceSets.integrationTest.output.classesDirs
+    classpath = sourceSets.integrationTest.runtimeClasspath
+    mustRunAfter test
 }
+check.dependsOn integration
 
 task smoke(type: Test) {
   description = "Runs Smoke Tests"
   testClassesDirs = sourceSets.smokeTest.output.classesDirs
   classpath = sourceSets.smokeTest.runtimeClasspath
+}
+
+task fortifyScan(type: JavaExec)  {
+    main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+    classpath += sourceSets.test.runtimeClasspath
+    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
 }
 
 checkstyle {
@@ -140,6 +154,8 @@ pmd {
   ruleSets = []
   ruleSetFiles = files("config/pmd/ruleset.xml")
 }
+
+project.tasks['jacocoTestReport'].dependsOn test, integration
 
 jacocoTestReport {
   executionData(test, integration)
@@ -242,18 +258,22 @@ repositories {
 }
 
 def versions = [
-  junit           : '5.7.2',
-  junitPlatform   : '1.7.2',
-  reformLogging   : '5.1.7',
-  springBoot      : springBoot.class.package.implementationVersion,
-  springfoxSwagger: '3.0.0',
-  serenity        : '2.5.10',
-  gradlePitest    : '1.6.0',
-  pitest          : '1.6.3',
-  sonarPitest     : '0.5',
-  lombok          : '1.18.12',
-  testcontainers  : '1.15.1',
-  restAssured     : '4.4.0'
+        junit             : '5.7.2',
+        junitPlatform     : '1.7.2',
+        reformLogging     : '5.1.7',
+        springBoot        : springBoot.class.package.implementationVersion,
+        springfoxSwagger  : '3.0.0',
+        serenity          : '2.5.10',
+        gradlePitest      : '1.6.0',
+        pitest            : '1.6.3',
+        sonarPitest       : '0.5',
+        lombok            : '1.18.12',
+        testcontainers    : '1.15.1',
+        restAssured       : '4.4.0',
+        serviceAuthVersion: '4.0.0',
+        commonsIo         : '2.7',
+        cucumber          : '6.8.0'
+
 ]
 
 ext.libraries = [
@@ -273,6 +293,8 @@ dependencies {
     exclude group: 'org.springframework.cloud', module: 'spring-cloud-context'
   }
 
+  implementation group: 'commons-io', name: 'commons-io', version: versions.commonsIo
+
   compile group: 'org.springframework.boot', name: 'spring-boot-starter-web'
   compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
   compile group: 'org.springframework.boot', name: 'spring-boot-starter-aop'
@@ -286,7 +308,7 @@ dependencies {
   compile group: 'uk.gov.hmcts.reform', name: 'logging-appinsights', version: versions.reformLogging
   compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.2.7.RELEASE'
 
-  compile group: 'uk.gov.hmcts.reform', name: 'properties-volume-spring-boot-starter', version:'0.1.0', withoutSpringCloudContext
+  compile group: 'uk.gov.hmcts.reform', name: 'properties-volume-spring-boot-starter', version: '0.1.0', withoutSpringCloudContext
 
   compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap'
   compile group: 'org.springframework.boot', name: 'spring-boot-starter-security'
@@ -299,6 +321,10 @@ dependencies {
 
   compile group: "com.networknt", name: "json-schema-validator", version: "1.0.49"
   compile group: 'org.projectlombok', name: 'lombok', version: versions.lombok
+  compile("org.springframework.boot:spring-boot-devtools")
+
+  annotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
+
 
   testCompile group: 'org.pitest', name: 'pitest', version: versions.pitest
   testCompile group: 'info.solidsoft.gradle.pitest', name: 'gradle-pitest-plugin', version: versions.gradlePitest
@@ -307,7 +333,12 @@ dependencies {
   testCompile group: 'org.testcontainers', name: 'testcontainers', version: versions.testcontainers
   testCompile group: 'org.testcontainers', name: 'postgresql', version: versions.testcontainers
 
-  testCompile 'com.github.hmcts:fortify-client:1.2.0:all'
+
+    testCompile 'com.github.hmcts:fortify-client:1.2.0:all'
+    testCompile group: 'org.testcontainers', name: 'testcontainers', version: versions.testcontainers
+    testCompile group: 'org.testcontainers', name: 'postgresql', version: versions.testcontainers
+    testCompile group: 'com.github.tomakehurst', name: 'wiremock-jre8-standalone', version: '2.21.0'
+
 
   testImplementation group: 'net.serenity-bdd', name: 'serenity-core', version: versions.serenity
   testImplementation group: 'net.serenity-bdd', name: 'serenity-junit', version: versions.serenity
@@ -316,6 +347,21 @@ dependencies {
 
   integrationTestCompile group: 'org.testcontainers', name: 'testcontainers', version: versions.testcontainers
   integrationTestCompile group: 'org.testcontainers', name: 'postgresql', version: versions.testcontainers
+
+
+  compile('com.h2database:h2')
+
+    testImplementation group: 'io.cucumber', name: 'cucumber-java8', version: versions.cucumber
+    testImplementation group: 'io.cucumber', name: 'cucumber-spring', version: versions.cucumber
+    testImplementation group: 'io.cucumber', name: 'cucumber-junit', version: versions.cucumber
+    testImplementation group: 'io.cucumber', name: 'cucumber-java', version: versions.cucumber
+    testImplementation group: 'io.cucumber', name: 'cucumber-spring', version: versions.cucumber
+
+    integrationTestCompile group: 'org.testcontainers', name: 'testcontainers', version: versions.testcontainers
+    integrationTestCompile group: 'org.testcontainers', name: 'postgresql', version: versions.testcontainers
+    integrationTestCompileOnly group: 'org.projectlombok', name: 'lombok', version: versions.lombok
+    integrationTestAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
+
 
   testImplementation libraries.junit5
   testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', {
@@ -339,10 +385,51 @@ dependencies {
   smokeTestCompile sourceSets.main.runtimeClasspath
   smokeTestCompile sourceSets.test.runtimeClasspath
   implementation 'junit:junit:4.13.2'
+  implementation(group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: versions.serviceAuthVersion)
+
+//Added for FN tests
+  testImplementation group: 'io.rest-assured', name: 'rest-assured', version: '4.2.1'
+  testImplementation group: 'io.rest-assured', name: 'json-path', version: '4.2.1'
+  testImplementation group: 'io.rest-assured', name: 'xml-path', version: '4.2.1'
+  testImplementation group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+  testImplementation group: 'com.googlecode.junit-toolbox', name: 'junit-toolbox', version: '2.4'
+  testImplementation group: 'org.testng', name: 'testng', version: '7.0.0-beta3'
+  testImplementation group: 'au.com.dius.pact.provider', name: 'junit5', version: '4.1.7'
+  testImplementation group: 'au.com.dius.pact.provider', name: 'junit', version: '4.1.7'
+  testImplementation group: 'au.com.dius.pact.provider', name: 'junit5spring', version: '4.1.7'
+
+  testImplementation 'io.cucumber:cucumber-java:6.9.1'
+  testImplementation 'io.cucumber:cucumber-junit:6.9.1'
+
+  cucumberRuntime 'io.cucumber:cucumber-java:6.9.1'
+  cucumberRuntime 'org.springframework:spring-web'
+  cucumberRuntime 'com.fasterxml.jackson.core:jackson-core'
+  cucumberRuntime group: 'org.springframework.security', name: 'spring-security-test'
+  cucumberRuntime group: 'io.rest-assured', name: 'rest-assured', version: '4.2.1'
+  cucumberRuntime group: 'io.rest-assured', name: 'json-path', version: '4.2.1'
+  cucumberRuntime group: 'io.rest-assured', name: 'xml-path', version: '4.2.1'
+  cucumberRuntime group: 'net.serenity-bdd', name: 'serenity-rest-assured'
+  cucumberRuntime group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+  cucumberRuntime group: 'com.googlecode.junit-toolbox', name: 'junit-toolbox', version: '2.4'
+  cucumberRuntime group: 'org.testng', name: 'testng', version: '7.0.0-beta3'
+
+  testCompileOnly group: 'org.projectlombok', name: 'lombok'
+  testAnnotationProcessor group: 'org.projectlombok', name: 'lombok'
+
+  testImplementation group: 'javax.el', name: 'javax.el-api', version: '3.0.0'
+  testImplementation group: 'net.sourceforge.htmlunit', name: 'htmlunit', version: '2.47.1'
+  testImplementation group: 'net.serenity-bdd', name: 'serenity-rest-assured'
+  testImplementation(group: 'net.serenity-bdd', name: 'serenity-core') {
+    exclude(module: 'htmlunit')
+  }
+  testImplementation group: 'net.serenity-bdd', name: 'serenity-junit'
+
+
 }
 
-project.ext {
-  flyway.password = 'lau'
+test {
+  useJUnitPlatform()
+  failFast = true
 }
 
 flyway {
@@ -388,5 +475,15 @@ bootJar {
 }
 
 wrapper {
-    distributionType = Wrapper.DistributionType.ALL
+  distributionType = Wrapper.DistributionType.ALL
 }
+
+bootRun {
+  systemProperties = System.properties
+}
+
+gradle.startParameter.continueOnFailure = true
+
+
+
+
